--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.6.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "org.sonarqube" version "3.3"
 }
 
 group = 'co.com.edu.uco.ing.software.project.transports'
@@ -29,4 +30,12 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "ldjorge88_transport"
+		property "sonar.organization", "ldjorge88"
+		property "sonar.host.url", "https://sonarcloud.io"
+	}
 }
