--- a/build.gradle
+++ b/build.gradle
@@ -35,15 +35,11 @@ dependencies {
 	}
 	implementation 'org.springframework.boot:spring-boot-starter-undertow'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'com.h2database:h2:2.1.210'
+	implementation 'com.h2database:h2:2.1.210'
 	implementation 'org.projectlombok:lombok:1.18.22'
 
-	testCompileOnly 'org.projectlombok:lombok:1.18.22'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
-
-	//compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'mysql:mysql-connector-java'
+	//runtimeOnly 'mysql:mysql-connector-java'
 
 	testImplementation 'com.h2database:h2:2.1.210'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
